version/0.18/_sources/api/solver/_autosummary/settings/physics_1.rst.txt
:orphan:

.. _physics_1:

physics
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.physics_1.physics
    :show-inheritance:

.. rubric:: Included in:

========================================   =====================================

Parent                                                                   Summary

========================================   =====================================
:ref:`surface_child <surface_child>`             'child_object_type' of surface.

:ref:`volume_child <volume_child>`                'child_object_type' of volume.

:ref:`force_child <force_child>`                   'child_object_type' of force.

:ref:`flux_child <flux_child>`                      'child_object_type' of flux.

:ref:`injection_child <injection_child>`       'child_object_type' of injection.

:ref:`mesh_child <mesh_child_1>`                    'child_object_type' of mesh.

:ref:`contour_child <contour_child>`             'child_object_type' of contour.

:ref:`vector_child <vector_child>`                'child_object_type' of vector.

:ref:`pathline_child <pathline_child>`          'child_object_type' of pathline.

:ref:`xy_plot_child <xy_plot_child>`             'child_object_type' of xy_plot.

========================================   =====================================

