version/0.19/_sources/api/solver/_autosummary/settings/physics_1.rst.txt
:orphan:

.. _physics_1:

physics
=======

.. autoclass:: ansys.fluent.core.solver.settings_241.physics_1.physics
    :show-inheritance:

.. rubric:: Included in:

========================================================   =====================================================

Parent                                                                                                   Summary

========================================================   =====================================================
:ref:`surface_child <surface_child>`                                             'child_object_type' of surface.

:ref:`volume_child <volume_child>`                                                'child_object_type' of volume.

:ref:`force_child <force_child>`                                                   'child_object_type' of force.

:ref:`moment_child <moment_child>`                                                'child_object_type' of moment.

:ref:`flux_child <flux_child>`                                                      'child_object_type' of flux.

:ref:`injection_child <injection_child_1>`                                     'child_object_type' of injection.

:ref:`mesh_child <mesh_child_1>`                                                    'child_object_type' of mesh.

:ref:`contour_child <contour_child>`                                             'child_object_type' of contour.

:ref:`vector_child <vector_child>`                                                'child_object_type' of vector.

:ref:`pathline_child <pathline_child>`                                          'child_object_type' of pathline.

:ref:`xy_plot_child <xy_plot_child>`                                             'child_object_type' of xy_plot.

:ref:`mass_flow <mass_flow_1>`                                       Print mass flow rate at inlets and outlets.

:ref:`heat_transfer <heat_transfer>`                                     Print heat transfer rate at boundaries.

:ref:`heat_transfer_sensible <heat_transfer_sensible>`          Print sensible heat transfer rate at boundaries.

:ref:`radiation_heat_transfer <radiation_heat_transfer>`       Print radiation heat transfer rate at boundaries.

:ref:`film_mass_flow <film_mass_flow>`                                  Print film mass flow rate at boundaries.

:ref:`film_heat_transfer <film_heat_transfer>`                      Print film heat transfer rate at boundaries.

:ref:`electric_current <electric_current>`                            Print electric current rate at boundaries.

:ref:`pressure_work <pressure_work_1>`                            Print pressure work rate at moving boundaries.

:ref:`viscous_work <viscous_work>`                                        Print viscous work rate at boundaries.

========================================================   =====================================================

